# learn-server-sent-events

./: README.md  docker-compose.yaml
client/: dev.Dockerfile  package-lock.json  package.json
client/src/: App.tsx  context.tsx  main.tsx  reducers.ts  style.css  types.ts
client/src/components/AiResponse/: index.tsx
client/src/components/ChatInput/: index.tsx
client/src/components/ChatMessage/: index.tsx
client/src/components/ChatMessagesWindow/: index.tsx
server/: app.py  dev.Dockerfile  pyproject.toml  sample.txt
vanilla-js-client/: dev.Dockerfile  index.html  main.js  package-lock.json  package.json  style.css  utils.js
